Fonts: prevent Furore hero title flash on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
   src: url("/fonts/Furore.otf") format("opentype");
   font-weight: normal;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 .font-furore {
